# eye-analysis

./: README.md  demo.py  main.py  pyproject.toml  requirements.txt
configs/: model.conf
scripts/: train_model.sh
src/commons/: constant.py  folder_utils.py  get_weights.py  logger.py
src/dataset/: facial_images.py
src/modeling/: models.py  train.py
src/modules/: pipeline.py  results.py
src/utilities/: data_utils.py  vis_utils.py
weights/: eye_state_model.h5
