[project]
name = "eye-analysis"
description = "Real-time eye state classification using multi-input fusion networks (FusionNet) for robust open/closed eye detection"
authors = [
    {name = "Ahmed Salim"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "dlib>=19.24.6",
    "face-detection",
    "gdown>=5.2.0",
    "imageio>=2.37.0",
    "matplotlib>=3.3.4",
    "numpy>=1.19.5",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.5.5",
    "pandas>=2.3.1",
    "patool>=1.16.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.10",
]

[tool.uv.sources]
face-detection = { git = "https://github.com/elliottzheng/face-detection.git", rev = "master" }
